--- a/public/changePassword.html
+++ b/public/changePassword.html
@@ -48,7 +48,7 @@
 
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
-    <section class="order" id="order">
+    <section class="sign" id="sign">
         <h1 class="heading">Change Password</h1>
         <form action="/changePassword" method="POST">
             <div class="box-container">
