--- a/public/chat.html
+++ b/public/chat.html
@@ -11,6 +11,7 @@
 			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="css/styleChat.css" />
+        <link rel="stylesheet" href="css/style.css" />
 		<title>ChatCord App</title>
 	</head>
 	<body>
