--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
 				<a href="signup">sign up</a>
 				<a href="signin">sign in</a>
 				<a href="chat">Chat</a>
+				<a href="googleMaps">Our Stores</a>
 
 			</nav>
 
