--- a/public/profile.html
+++ b/public/profile.html
@@ -52,7 +52,7 @@
     </section>
     <section class="order" id="order">
         <h1 class="heading" onclick="profileInfo()">My Profile</h1>
-        <div class='card1' id="proDiv" style="visibility: hidden;">
+        <div class='card1' id="proDiv">
             <div class='container1' id="pdivP">
                 <h1 id="profileName">
                     <b></b>
@@ -61,5 +61,22 @@
             </div>
         </div>
     </section>
+    <script>
+        $.get('/profileInfo',function(data,status){
+		$("#profileName").text(data.name);
+		$("#profileEmail").text(data.email);
+		for (let i =0; i<data.listOfOrders.length; i++){
+                const index = i+1;
+                const arr = data.listOfOrders[i].content.split("_");
+                const name = arr[0];
+                const quantity = arr[1];
+                $("#pdivP").append("-------------------------");
+                $("#pdivP").append("<p>Order Number - " + index + "</p>");
+                $("#pdivP").append("<p>Name - " + name + " , Quantity - " + quantity +" KG</p>");
+                $("#pdivP").append("<p>Price - " + data.listOfOrders[i].price + "$</p>");
+                $("#pdivP").append("<p>Date - " + data.listOfOrders[i].date + "</p>");
+            }
+        });
+    </script>
 </body>
 </html>
