--- a/public/userMenu.html
+++ b/public/userMenu.html
@@ -49,7 +49,7 @@
 
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
-    <section id="order" class="order">
+    <section id="sign" class="sign">
         <h1 class="heading">We May Know A Little Bit About You...</h1>
         <h2 onclick="recommend()" id="toShowHistroy" class="heading">Click To Find What Do We Know</h2>
         <h2 style="font-size: x-large;text-align: center;">According To Your History We Recommend You To Search Again:</h2>
@@ -58,7 +58,7 @@
 
     </section>
     <section>
-        <section id="order" class="order">
+        <section id="sign" class="sign">
             <h1 class="heading">Search</h1>
             <h1 style="font-size: x-large;">If You Want Just To Filter Make Sure Other Options Are Empty!</h1>
             <form action="/reservationSelect" method="get">
