--- a/public/adminReminder.html
+++ b/public/adminReminder.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
-    <h1>Oops! You must be Admin!</h1>
+<body style="background-color:red ;">
+    <h1 style="color: black ; text-align: center;">Oops! You must be Admin!</h1>
     <meta http-equiv="refresh" content="2;url=http://localhost:8081/">
 </body>
 </html>
