video and canvas

--- a/public/adminMenu.html
+++ b/public/adminMenu.html
@@ -44,6 +44,7 @@
             <a href="/adminMenu/iceCreams">Ice Creams Menu</a>
             <a href="/adminMenu/Stats">Stats Menu</a>
             <a href="/adminMenu/gelaterias">Gelaterias Menu</a>
+            <a href="/googleMaps">Stores</a>
             <a href="/logout">Log-Out</a>
 
         </nav>
