--- a/public/admiGelateriasMenu.html
+++ b/public/admiGelateriasMenu.html
@@ -45,7 +45,7 @@
             <a href="/adminMenu">Menu</a>
             <a href="/adminMenu/iceCreams">Ice Creams Menu</a>
             <a href="/adminMenu/Stats">Stats Menu</a>
-            <a href="/googleMaps">Google Maps Menu</a>
+            <a href="/googleMaps">Stores</a>
             <a href="/logout">Log-Out</a>
 
         </nav>
