--- a/public/adminIceCreamsMenu.html
+++ b/public/adminIceCreamsMenu.html
@@ -44,6 +44,7 @@
             <a href="/adminMenu">Menu</a>
             <a href="/adminMenu/Stats">Stats Menu</a>
             <a href="/adminMenu/gelaterias">Gelaterias Menu</a>
+            <a href="/googleMaps">Stores</a>
             <a href="/logout">Log-Out</a>
         </nav>
 
