--- a/public/statsAdmin.html
+++ b/public/statsAdmin.html
@@ -49,6 +49,7 @@
 				<a href="/adminMenu">Menu</a>
 				<a href="/adminMenu/iceCreams">Ice Creams Menu</a>
 				<a href="/adminMenu/gelaterias">Gelaterias Menu</a>
+				<a href="/googleMaps">Stores</a>
 				<a href="/logout">Log-Out</a>
 			</nav>
 
