--- a/public/index.html
+++ b/public/index.html
@@ -80,10 +80,13 @@
 
 
 		<!-- about us -->
-
-		<div id="stage" style="align-items: center; align-self: center;"></div>
+<a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="NEW YORK" data-label_2="WEATHER" data-theme="original" >NEW YORK WEATHER</a>
+<script>
+!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+</script>
 		<section class="about" id="about">
 			<h1 class="heading">about us</h1>
+			<div id="stage" style="align-items: center; align-self: center; justify-self: center;"></div>
 			<video width="320" height="240" autoplay controls re  style="align-items: center;">
 				<source src="/video1.mp4" type="video/mp4">
 				  Your browser does not support the video tag.
