--- a/public/signIn.html
+++ b/public/signIn.html
@@ -53,5 +53,45 @@
 				<input type="submit" value="sign in" class="btn" />
 			</form>
 		</section>
+				<!-- footer -->
+
+				<section class="footer">
+					<div class="icons-container">
+						<div class="icons">
+							<i class="fas fa-map"></i>
+							<h3>address</h3>
+								<iframe
+									class="map"
+									src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6769.348130129169!2d34.76840928196907!3d31.969737915165094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f5eb44e1c1%3A0xfbe9b8c6bce59319!2sCollege%20of%20Management%20Academic%20Studies!5e0!3m2!1sen!2sil!4v1660141977129!5m2!1sen!2sil"
+									;
+									allowfullscreen=""
+									loading="lazy"
+									referrerpolicy="no-referrer-when-downgrade"
+								></iframe>
+								<p>
+									Elie Wiesel St 2, Rishon LeTsiyon,  Israel
+								</p>
+						</div>
+		
+						<div class="icons">
+							<i class="fas fa-phone"></i>
+							<h3>phone</h3>
+							<p>03-333-3333</p>
+							<p>07-777-7777</p>
+						</div>
+		
+						<div class="icons">
+							<i class="fas fa-clock"></i>
+							<h3>opening hours</h3>
+							<p>
+								Sunday - Thursday : 9:00 - 22:00 <br />
+								Friday: 9:00 - 11:00
+							</p>
+						</div>
+					</div>
+		
+				</section>
+		
+				<!-- footer -->
 	</body>
 </html>
