--- a/public/chatInner.html
+++ b/public/chatInner.html
@@ -13,7 +13,7 @@ I<!DOCTYPE html>
       <a href="#" class="logo">
         <i class="fas fa-ice-cream"></i> Gelato de creme
       </a>
-      <a href="index.html" class="btn">Leave Chat</a>
+      <a href="/" class="btn">Leave Chat</a>
     </header>
     <!-- <main class="chat-main"> -->
       <div class="chat-messages">
