--- a/public/index.html
+++ b/public/index.html
@@ -67,33 +67,32 @@
 
 		<!-- share -->
 		<div class="share-btn-container">
-			<a href="#" class="facebook-btn">
+			<a href="#" id="facebook-btn" class="facebook-btn">
 				<i class="fab fa-facebook"></i>
 			</a>
-			<a href="#" class="twitter-btn">
+			<a href="#" id="twitter-btn" class="twitter-btn">
 				<i class="fab fa-twitter"></i>
 			</a>
-			<a href="#" class="whatsapp-btn">
+			<a href="#" id="whatsapp-btn" class="whatsapp-btn">
 				<i class="fab fa-whatsapp"></i>
 			</a>
 		</div>
 
 
 		<!-- about us -->
-<a class="weatherwidget-io" href="https://forecast7.com/en/40d71n74d01/new-york/" data-label_1="NEW YORK" data-label_2="WEATHER" data-theme="original" >NEW YORK WEATHER</a>
-<script>
-!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-</script>
+		<a class="weatherwidget-io" href="https://forecast7.com/en/31d9734d79/rishon-letsiyon/" data-label_1="RISHON LETSIYON" data-label_2="WEATHER" data-theme="original" >RISHON LETSIYON WEATHER</a>
+		<script>
+		!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+		</script>
 		<section class="about" id="about">
 			<h1 class="heading">about us</h1>
-			<div id="stage" style="align-items: center; align-self: center; justify-self: center;"></div>
-			<video width="320" height="240" autoplay controls re  style="align-items: center;">
-				<source src="/video1.mp4" type="video/mp4">
-				  Your browser does not support the video tag.
-			</video>
 			<div class="row">
 				<div class="image">
 					<img src="/images/iceCreamAboutUs.jpg" alt="" />
+					<video width="320" height="240" autoplay controls re  style="align-items: center;">
+						<source src="/video1.mp4" type="video/mp4">
+						  Your browser does not support the video tag.
+					</video>		
 				</div>
 				<div class="content">
 					<h3>home made ice creams for you</h3>
@@ -108,6 +107,7 @@
 
 
 					</p>
+					<div id="stage" style="align-items: center; align-self: center; justify-self: center;"></div>
 				</div>
 			</div>
 			 
@@ -135,14 +135,6 @@
 				<div class="icons">
 					<i class="fas fa-map"></i>
 					<h3>address</h3>
-						<iframe
-							class="map"
-							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6769.348130129169!2d34.76840928196907!3d31.969737915165094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1502b3f5eb44e1c1%3A0xfbe9b8c6bce59319!2sCollege%20of%20Management%20Academic%20Studies!5e0!3m2!1sen!2sil!4v1660141977129!5m2!1sen!2sil"
-							;
-							allowfullscreen=""
-							loading="lazy"
-							referrerpolicy="no-referrer-when-downgrade"
-						></iframe>
 						<p>
 							Elie Wiesel St 2, Rishon LeTsiyon,  Israel
 						</p>
@@ -618,6 +610,16 @@
 		}
 		})(demo)
 		demo.init();
+		</script>
+		<script>
+		let postUrl = encodeURI(document.location.href);
+		let postTitle = encodeURI("Hey, Check out this awesome new ice-cream shop: ");
+		const facebookBtn = document.querySelector(".facebook-btn");
+		const twitterBtn = document.querySelector(".twitter-btn");
+		const whatsappBtn = document.querySelector(".whatsapp-btn");
+		facebookBtn.setAttribute("href",`https://www.facebook.com/sharer.php?u=${postUrl}`)
+		twitterBtn.setAttribute("href",`https://twitter.com/share?url=${postUrl}&text=${postTitle}`)
+		whatsappBtn.setAttribute("href",`https://api.whatsapp.com/send?text=${postTitle}${postUrl}`)
 		</script>
 
 	</body>
