--- a/public/reservationSelect.html
+++ b/public/reservationSelect.html
@@ -50,7 +50,6 @@
         <div id="menu-btn" class="fas fa-bars"></div>
     </section>
 <section class="sign" id="sign">
-        <h1 style="font-size:xx-large;">Show Search Results</h1>
         <form action="/resSelect" method="post">
             <div id="iceCreams2" class="box-container" style="visibility: hidden; text-align: center;">
                 <br>
@@ -79,6 +78,38 @@
             </div>
     </form>
     </section>
+	<!-- footer -->
+
+	<section class="footer">
+		<div class="icons-container">
+			<div class="icons">
+				<i class="fas fa-map"></i>
+				<h3>address</h3>
+					<p>
+						Elie Wiesel St 2, Rishon LeTsiyon,  Israel
+					</p>
+			</div>
+
+			<div class="icons">
+				<i class="fas fa-phone"></i>
+				<h3>phone</h3>
+				<p>03-333-3333</p>
+				<p>07-777-7777</p>
+			</div>
+
+			<div class="icons">
+				<i class="fas fa-clock"></i>
+				<h3>opening hours</h3>
+				<p>
+					Sunday - Thursday : 9:00 - 22:00 <br />
+					Friday: 9:00 - 11:00
+				</p>
+			</div>
+		</div>
+
+	</section>
+
+	<!-- footer -->
     <script>
         $("#iceCreams2").css('visibility','visible');
 	$("#text1").css('visibility','visible');
